WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31131
wxport mouse events crashes and assertions
https://bugs.webkit.org/show_bug.cgi?id=31131
Summary
wxport mouse events crashes and assertions
Kevin Watters
Reported
2009-11-04 10:57:46 PST
To avoid some asserts, wxWebView should use Connect and Disconnect to register for popup menu events only when a context menu is visible. It also needs to release any mouse capture it has on destruction.
Attachments
fixes mouse event problems
(2.34 KB, patch)
2009-11-04 11:01 PST
,
Kevin Watters
kevino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin Watters
Comment 1
2009-11-04 11:01:10 PST
Created
attachment 42496
[details]
fixes mouse event problems
Kevin Ollivier
Comment 2
2009-11-04 12:38:13 PST
Landed in
r50522
, thanks!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug