Reviewed by Kevin Ollivier.

Fix an assert on shutdown when wxWebView has captured the mouse,
and make sure wxWebView's right click handling is only active when
the WebCore popup menu is used.

https://bugs.webkit.org/show_bug.cgi?id=31131


Canonical link: https://commits.webkit.org/41952@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50522 268f45cc-cd09-0410-ab3c-d52691b4dbfc